--- a/project.config.json
+++ b/project.config.json
@@ -13,5 +13,6 @@
 	"miniprogramRoot": "dist/",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
+	"libVersion": "2.6.6",
 	"condition": {}
 }
